ensure oxide build is used in integration tests
This will ensure the `@tailwindcss/oxide` dependency is available
(whether we use it or not).

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -76,7 +76,7 @@ jobs:
         run: npm run oxide:install
 
       - name: Build Tailwind CSS
-        run: npx turbo run build --filter=//
+        run: npx turbo run oxide:build --filter=//
 
       - name: Test ${{ matrix.integration }}
         run: npx turbo run test --filter=./integrations/${{ matrix.integration }}
