--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -9,6 +9,8 @@ permissions:
 
 env:
   CI: true
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
 jobs:
   build:
@@ -26,26 +28,53 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org'
-      #   cache: 'npm'
-      #
-      # - name: Use cached node_modules
-      #   id: cache
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: node_modules
-      #     key: nodeModules-${{ hashFiles('**/package-lock.json') }}-${{ matrix.node-version }}
-      #     restore-keys: |
-      #       nodeModules-
+
+      - name: Cache node_modules (main)
+        id: main-cache
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+
+      - name: Cache node_modules (oxide)
+        id: oxide-cache
+        uses: actions/cache@v3
+        with:
+          path: ./oxide/crates/node/node_modules
+          key: ${{ runner.os }}-nodeModules-oxide-${{ matrix.node-version }}-${{ hashFiles('./oxide/crates/node/**/package-lock.json') }}
+
+      # Cargo already skips downloading dependencies if they already exist
+      - name: Cache cargo
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('./oxide/**/Cargo.lock') }}
 
       - name: Install dependencies
-        # if: steps.cache.outputs.cache-hit != 'true'
-        run: npm install && npm run oxide:install
+        if: steps.main-cache.outputs.cache-hit != 'true'
+        run: npm install
+
+      - name: Install oxide dependencies
+        if: steps.oxide-cache.outputs.cache-hit != 'true'
+        run: npm run oxide:install
 
       - name: Build Tailwind CSS
-        run: npm run oxide:build
+        run: npx turbo run oxide:build --filter=//
 
       - name: Test
-        run: npm test
+        run: npx turbo run test --filter=//
+
+      # This will swap out the Rust-based oxide version with a simple shim. So that you don't
+      # require all the Rust specific version at tjkhis time.
+      - name: Setup `@tailwindcss/oxide` shim
+        run: |
+          sed "s#\"@tailwindcss/oxide\": \".*\"#\"@tailwindcss/oxide\": \"file:./oxide-node-api-shim\"#" package.json > package_updated.json
+          mv package_updated.json package.json
 
       - name: Resolve version
         id: vars
