tmp: enable insiders release in PRs
Just to check if everything works before merging. Can be removed once
tested.

--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -3,6 +3,8 @@ name: Release Insiders
 on:
   push:
     branches: [master]
+  pull_request:
+    branches: [master]
 
 permissions:
   contents: read
