--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "dependencies": {
     "@tailwindcss/oxide": "file:oxide/crates/node",
     "arg": "^5.0.2",
+    "browserslist": "^4.21.4",
     "chokidar": "^3.5.3",
     "color-name": "^1.1.4",
     "detective": "^5.2.1",
