use `install:all` script name
Just using `install` as a script name will be called when running
`npm install`.
Now that we marked the repo as a `workspace`, `npm install` will run
install in all workspaces which is... not ideal.

--- a/oxide/package.json
+++ b/oxide/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "test": "cargo test",
-    "install": "npm run install:npm && (cargo install cargo-watch cargo-fuzz || true)",
+    "install:all": "npm run install:npm && (cargo install cargo-watch cargo-fuzz || true)",
     "install:npm": "npm install --prefix ./crates/node",
     "build": "cargo build --release",
     "build:node": "npm --prefix ./crates/node run build",
