--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -59,13 +59,13 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('./oxide/**/Cargo.lock') }}
 
-      - name: Install dependencies
-        if: steps.main-cache.outputs.cache-hit != 'true'
-        run: npm install
-
       - name: Install oxide dependencies
         if: steps.oxide-cache.outputs.cache-hit != 'true'
         run: npm run oxide:install
+
+      - name: Install dependencies
+        # if: steps.main-cache.outputs.cache-hit != 'true'
+        run: npm install
 
       - name: Build Tailwind CSS
         run: npx turbo run oxide:build --filter=//
