--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,12 +40,12 @@ jobs:
           path: node_modules
           key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
 
-      - name: Cache node_modules (oxide)
-        id: oxide-cache
-        uses: actions/cache@v3
-        with:
-          path: ./oxide/crates/node/node_modules
-          key: ${{ runner.os }}-nodeModules-oxide-${{ matrix.node-version }}-${{ hashFiles('./oxide/crates/node/**/package-lock.json') }}
+      # - name: Cache node_modules (oxide)
+      #   id: oxide-cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ./oxide/crates/node/node_modules
+      #     key: ${{ runner.os }}-nodeModules-oxide-${{ matrix.node-version }}-${{ hashFiles('./oxide/crates/node/**/package-lock.json') }}
 
       # Cargo already skips downloading dependencies if they already exist
       - name: Cache cargo
@@ -59,13 +59,13 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('./oxide/**/Cargo.lock') }}
 
-      - name: Install oxide dependencies
-        if: steps.oxide-cache.outputs.cache-hit != 'true'
-        run: npm run oxide:install
-
       - name: Install dependencies
         # if: steps.main-cache.outputs.cache-hit != 'true'
         run: npm install
+
+      # - name: Install oxide dependencies
+      #   if: steps.oxide-cache.outputs.cache-hit != 'true'
+      #   run: npm run oxide:install
 
       - name: Build Tailwind CSS
         run: npx turbo run oxide:build --filter=//
