let's think about this
Let's try and cache the `node_modules` and share as much as possible.
However, some scripts still need to be installed specific to the OS.

Running `npm install` locally doesn't throw away your `node_modules`,
so if we just cache `node_modules` but also run `npm install` that
should keep as much as possible and still improve install times since
`node_modules` is already there.

I think.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,19 +33,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: Cache node_modules (main)
+      - name: Cache node_modules
         id: main-cache
         uses: actions/cache@v3
         with:
           path: node_modules
           key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
-
-      # - name: Cache node_modules (oxide)
-      #   id: oxide-cache
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: ./oxide/crates/node/node_modules
-      #     key: ${{ runner.os }}-nodeModules-oxide-${{ matrix.node-version }}-${{ hashFiles('./oxide/crates/node/**/package-lock.json') }}
 
       # Cargo already skips downloading dependencies if they already exist
       - name: Cache cargo
@@ -60,12 +53,7 @@ jobs:
           key: ${{ runner.os }}-cargo-${{ hashFiles('./oxide/**/Cargo.lock') }}
 
       - name: Install dependencies
-        # if: steps.main-cache.outputs.cache-hit != 'true'
         run: npm install
-
-      # - name: Install oxide dependencies
-      #   if: steps.oxide-cache.outputs.cache-hit != 'true'
-      #   run: npm run oxide:install
 
       - name: Build Tailwind CSS
         run: npx turbo run oxide:build --filter=//
@@ -91,15 +79,14 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: Use cached node_modules
-        id: cache
+      - name: Cache node_modules
+        id: main-cache
         uses: actions/cache@v3
         with:
           path: node_modules
           key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
 
       - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
 
       - name: Lint
