--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -41,19 +41,12 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - name: Cache node_modules (tailwindcss)
+      - name: Cache node_modules
         id: tailwindcss-cache
         uses: actions/cache@v3
         with:
           path: node_modules
           key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
-
-      - name: Cache node_modules (oxide)
-        id: tailwindcss-oxide-cache
-        uses: actions/cache@v3
-        with:
-          path: ./oxide/crates/node/node_modules
-          key: ${{ runner.os }}-nodeModules-oxide-${{ matrix.node-version }}-${{ hashFiles('./oxide/crates/node/**/package-lock.json') }}
 
       # Cargo already skips downloading dependencies if they already exist
       - name: Cache cargo
@@ -67,13 +60,8 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('./oxide/**/Cargo.lock') }}
 
-      - name: Install dependencies (main)
-        if: steps.tailwindcss-cache.outputs.cache-hit != 'true'
+      - name: Install dependencies
         run: npm install
-
-      - name: Install dependencies (oxide)
-        if: steps.tailwindcss-oxide-cache.outputs.cache-hit != 'true'
-        run: npm run oxide:install
 
       - name: Build Tailwind CSS
         run: npx turbo run oxide:build --filter=//
