ensure generated `index.js` and `index.d.ts` files are considered outputs

--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,14 @@
       "outputs": []
     },
     "//#oxide:build": {
-      "outputs": ["lib/**", "peers/**", "oxide/target/**", "oxide/crates/node/*.node"]
+      "outputs": [
+        "lib/**",
+        "peers/**",
+        "oxide/target/**",
+        "oxide/crates/node/*.node",
+        "oxide/crates/node/index.d.ts",
+        "oxide/crates/node/index.js"
+      ]
     },
     "//#style": {
       "outputs": []
