normalize caching further in all workflows

--- a/.github/workflows/release-insiders-oxide.yml
+++ b/.github/workflows/release-insiders-oxide.yml
@@ -29,11 +29,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Cache node_modules
-        id: main-cache
         uses: actions/cache@v3
         with:
           path: node_modules
-          key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-${{ matrix.node-version }}-node_modules-${{ hashFiles('**/package-lock.json') }}
 
       # Cargo already skips downloading dependencies if they already exist
       - name: Cache cargo
@@ -89,11 +88,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Cache node_modules
-        id: main-cache
         uses: actions/cache@v3
         with:
           path: node_modules
-          key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-${{ matrix.node-version }}-node_modules-${{ hashFiles('**/package-lock.json') }}
 
       # Cargo already skips downloading dependencies if they already exist
       - name: Cache cargo
@@ -174,11 +172,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Cache node_modules
-        id: main-cache
         uses: actions/cache@v3
         with:
           path: node_modules
-          key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-${{ matrix.node-version }}-node_modules-${{ hashFiles('**/package-lock.json') }}
 
       # Cargo already skips downloading dependencies if they already exist
       - name: Cache cargo
@@ -242,11 +239,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Cache node_modules
-        id: main-cache
         uses: actions/cache@v3
         with:
           path: node_modules
-          key: ${{ runner.os }}-nodeModules-main-${{ matrix.node-version }}-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-${{ matrix.node-version }}-node_modules-${{ hashFiles('**/package-lock.json') }}
 
       # Cargo already skips downloading dependencies if they already exist
       - name: Cache cargo
