tmp: let's figure out release insiders oxide

--- a/.github/workflows/release-insiders-oxide.yml
+++ b/.github/workflows/release-insiders-oxide.yml
@@ -3,6 +3,8 @@ name: Release Insiders — Oxide
 on:
   push:
     branches: [master]
+  pull_request:
+    branches: [master]
 
 env:
   APP_NAME: tailwindcss-oxide
