ensure we use `npm@7` for older versions of Node.js
This is important so that we can guarantee that `workspaces` are
supported which we depend on right now (just for install purposes).

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -33,6 +33,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           # cache: 'npm'
 
+      - name: Install newer version of npm on older versions of Node.js
+        if: matrix.node-version < 16
+        run: npm install -g npm@7
+
       - name: Cache node_modules
         uses: actions/cache@v3
         with:
