tmp: trigger CI build (GitHub is doing funky things and not working right now)

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [master]
+    branches: [master, 'feat/improve-ci']
   pull_request:
     branches: [master]
 
