--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [master, 'feat/improve-ci']
+    branches: [master]
   pull_request:
     branches: [master]
 
