--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -61,11 +61,8 @@ jobs:
       - name: Build Tailwind CSS
         run: npx turbo run oxide:build --filter=//
 
-      - name: Test (default)
+      - name: Test
         run: npx turbo run test --filter=//
-
-      - name: Test (oxide)
-        run: OXIDE=1 npx turbo run test --filter=//
 
   lint:
     runs-on: ubuntu-latest
