splitup package.json scripts into "public" and "private" scripts
Not ideal of course, but this should make it a tiny bit easier to know
which scripts _you_ as a developer / contributor have to run.

--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "oxide/crates/node"
   ],
   "scripts": {
-    "rebuild-fixtures": "npm run build && node -r @swc/register scripts/rebuildFixtures.js",
-    "style": "eslint .",
-    "pretest": "npm run generate",
+    "__Public Scripts__": "",
+    "dev": "concurrently -n tailwind,oxide-node -c green,yellow 'npm run stable:build -- --watch' 'npm run --prefix ./oxide dev:node'",
+    "build": "npm run --prefix ./oxide build:node && npm run stable:build",
     "test": "jest",
+    "style": "eslint .",
+    "__Private Scripts__": "",
+    "pretest": "npm run generate",
+    "rebuild-fixtures": "npm run build && node -r @swc/register scripts/rebuildFixtures.js",
     "test:integrations": "npm run test --prefix ./integrations",
     "install:integrations": "node scripts/install-integrations.js",
     "generate:plugin-list": "node -r @swc/register scripts/create-plugin-list.js",
@@ -28,8 +32,6 @@
     "generate": "npm run generate:plugin-list && npm run generate:types",
     "release-channel": "node ./scripts/release-channel.js",
     "release-notes": "node ./scripts/release-notes.js",
-    "dev": "concurrently -n tailwind,oxide-node -c green,yellow 'npm run stable:build -- --watch' 'npm run --prefix ./oxide dev:node'",
-    "build": "npm run --prefix ./oxide build:node && npm run stable:build",
     "prestable:build": "npm run generate && rimraf lib",
     "stable:build": "swc src --out-dir lib --copy-files",
     "poststable:build": "esbuild lib/cli-peer-dependencies.js --bundle --platform=node --outfile=peers/index.js --define:process.env.CSS_TRANSFORMER_WASM=false",
