--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -1,4 +1,4 @@
-name: Release Insiders — Oxide
+name: Release Insiders
 
 on:
   push:
@@ -8,6 +8,7 @@ env:
   APP_NAME: tailwindcss-oxide
   NODE_VERSION: 16
   OXIDE_LOCATION: ./oxide/crates/node
+  RELEASE_CHANNEL: oxide-insiders
 
 jobs:
   oxide-build:
@@ -283,7 +284,7 @@ jobs:
       - name: Resolve version
         id: vars
         run: |
-          echo "NPM_VERSION=0.0.0-oxide-insiders.$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "NPM_VERSION=0.0.0-${{ env.RELEASE_CHANNEL }}.$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Generate entry point
         run: npm run build --prefix ${{ env.OXIDE_LOCATION }}
@@ -294,7 +295,7 @@ jobs:
             echo "Publishing $pkg..."
             cd $pkg
             npm version ${{ env.NPM_VERSION }} --force --no-git-tag-version
-            npm publish --tag oxide-insiders --access public
+            npm publish --tag ${{ env.RELEASE_CHANNEL }} --access public
             cd -
           done
 
@@ -303,7 +304,7 @@ jobs:
           npm version ${{ env.NPM_VERSION }} --force --no-git-tag-version
           sed "s#\"0.0.0\"#\"${{ env.NPM_VERSION }}\"#g" package.json > package_updated.json
           mv package_updated.json package.json
-          npm publish --tag oxide-insiders --access public
+          npm publish --tag ${{ env.RELEASE_CHANNEL }} --access public
           cd -
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -332,7 +333,7 @@ jobs:
         id: vars
         run: |
           echo "SHA_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-          echo "OXIDE_NPM_VERSION=0.0.0-oxide-insiders.$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "OXIDE_NPM_VERSION=0.0.0-${{ env.RELEASE_CHANNEL }}.$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Setup `@tailwindcss/oxide` version
         run: |
@@ -348,10 +349,27 @@ jobs:
       - name: Test
         run: npm test
 
-      - name: 'Version based on commit: 0.0.0-oxide-insiders.${{ env.SHA_SHORT }}'
-        run: npm version 0.0.0-oxide-insiders.${{ env.SHA_SHORT }} --force --no-git-tag-version
+      - name: 'Version based on commit: 0.0.0-${{ env.RELEASE_CHANNEL }}.${{ env.SHA_SHORT }}'
+        run: npm version 0.0.0-${{ env.RELEASE_CHANNEL }}.${{ env.SHA_SHORT }} --force --no-git-tag-version
 
       - name: Publish
-        run: npm publish --tag oxide-insiders
+        run: npm publish --tag ${{ env.RELEASE_CHANNEL }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      # !! Enable this, once we are cleaning up all the `stable` engine related files.
+      #
+      # - name: Trigger Tailwind Play update
+      #   uses: actions/github-script@v6
+      #   with:
+      #     github-token: ${{ secrets.TAILWIND_PLAY_TOKEN }}
+      #     script: |
+      #       await github.rest.actions.createWorkflowDispatch({
+      #         owner: 'tailwindlabs',
+      #         repo: 'play.tailwindcss.com',
+      #         ref: 'master',
+      #         workflow_id: 'upgrade-tailwindcss.yml',
+      #         inputs: {
+      #           insidersVersion: '0.0.0-${{ env.RELEASE_CHANNEL }}.${{ env.SHA_SHORT }}'
+      #         }
+      #       })
