--- a/.github/workflows/ci-stable.yml
+++ b/.github/workflows/ci-stable.yml
@@ -17,7 +17,6 @@ env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
   TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
   CACHE_PREFIX: stable
-  NODE_VERSIONS: [12]
 
 jobs:
   build:
@@ -25,7 +24,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ${{ env.NODE_VERSIONS }}
+        node-version: [12]
 
     steps:
       - uses: actions/checkout@v3
@@ -52,34 +51,6 @@ jobs:
 
       - name: Test
         run: npx turbo run test --filter=//
-
-  lint:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: ${{ env.NODE_VERSIONS }}
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-
-      - name: Use the `stable` engine
-        run: |
-          node ./scripts/swap-engines.js
-
-      - name: Cache node_modules
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ env.CACHE_PREFIX }}-node_modules-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Install dependencies
-        run: npm install
 
       - name: Lint
         run: npx turbo run style --filter=//
