--- a/.github/workflows/release-insiders-stable.yml
+++ b/.github/workflows/release-insiders-stable.yml
@@ -41,10 +41,10 @@ jobs:
         run: npm install
 
       - name: Build Tailwind CSS
-        run: npx turbo run build --filter=//
+        run: npm run build
 
       - name: Test
-        run: npx turbo run test --filter=//
+        run: npm run test
 
       - name: Resolve version
         id: vars
