increase `node-version` matrix

--- a/.github/workflows/ci-stable.yml
+++ b/.github/workflows/ci-stable.yml
@@ -24,7 +24,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12]
+        node-version: [12, 18]
 
     steps:
       - uses: actions/checkout@v3
