run relese scripst directly
Instead of going via `npm`. It's a bit nicer and quicker!

--- a/.github/workflows/release-stable.yml
+++ b/.github/workflows/release-stable.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Calculate environment variables
         run: |
-          echo "RELEASE_CHANNEL=$(npm run release-channel --silent)" >> $GITHUB_ENV
+          echo "RELEASE_CHANNEL=$(node ./scripts/release-channel.js)" >> $GITHUB_ENV
           echo "TAILWINDCSS_VERSION=$(node -e 'console.log(require(`./package.json`).version);')" >> $GITHUB_ENV
 
       - name: Publish
