ensure to generate the plugin list before running `jest`
We _could_ use an `npm run pretest`, but then you can't run `jest`
directly anymore (which is required for some tools like vscode
extensions).

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   ],
   "jest": {
     "testTimeout": 30000,
+    "globalSetup": "<rootDir>/jest/global-setup.js",
     "setupFilesAfterEnv": [
       "<rootDir>/jest/customMatchers.js"
     ],
